Fix > z-index problem

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -6,6 +6,7 @@
     position: relative;
     text-align: center;
     background: #efefef;
+    z-index: -1;
 
     &:last-of-type {
       input + label {
